tests/ui/async-await/async-closures/ambiguous-arg.stderr
error[E0282]: type annotations needed
  --> $DIR/ambiguous-arg.rs:7:25
   |
LL |       async |check, a, b| {
   |  _________________________^
LL | |
LL | |         temp.abs_diff(12);
LL | |     };
   | |_____^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
